--- a/Image_Classification_using_Logistic_Regression_in_PyTorch.ipynb
+++ b/Image_Classification_using_Logistic_Regression_in_PyTorch.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Image Classification using Logistic Regression in PyTorch.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOq88hZ11QD9i2azxHTYxWC",
+      "authorship_tag": "ABX9TyPn+aOlEX50z6yOQ9v3K1ue",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1706,7 +1706,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 90
+          "height": 110
         },
         "outputId": "552878ef-dc1d-4011-b7b4-0fc7712a575b"
       },
@@ -1735,7 +1735,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 417
+          "height": 453
         },
         "outputId": "ebd57040-5884-49fb-83f9-a18f4a631a5b"
       },
@@ -1832,7 +1832,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 256
+          "height": 276
         },
         "outputId": "8bdb592f-120f-4881-cf3a-aa990d5ccf46"
       },
@@ -1871,7 +1871,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 109
+          "height": 129
         },
         "outputId": "fbab6c86-4326-473e-fb06-dac540b239c9"
       },
@@ -1907,7 +1907,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 109
+          "height": 129
         },
         "outputId": "9b849aa4-f094-4fc7-ce7b-c544ec4a3f0e"
       },
@@ -1948,7 +1948,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 403
+          "height": 423
         },
         "outputId": "7f3439a0-6226-47f1-947b-dd452358f169"
       },
@@ -2166,6 +2166,37 @@
       "cell_type": "code",
       "metadata": {
         "id": "z2vqVv_Kc8Gq",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def evaluate(model, val_loader):\n",
+        "  outputs = [model.validation_step(batch) for batch in val_loader]\n",
+        "  return model.validation_epoch_end(outputs)\n",
+        "\n",
+        "def fit(epochs, lr, model, train_loader, val_loader, opt_func = torch.optim.SGD):\n",
+        "  history = []\n",
+        "  optimizer = opt_func(model.parameters(), lr)\n",
+        "  for epoch in range(epochs):\n",
+        "    # Training\n",
+        "    for batch in train_loader:\n",
+        "      loss = model.training_step(batch)\n",
+        "      loss.backward()\n",
+        "      optimizer.step()\n",
+        "      optimizer.zero_grad()\n",
+        "    # Validation\n",
+        "    result = evaluate(model, val_loader)\n",
+        "    model.epoch_end(epoch, result)\n",
+        "    history.append(result)\n",
+        "  return history"
+      ],
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "m-MCQET8dwWJ",
         "colab_type": "code",
         "colab": {}
       },
