--- a/Image_Classification_using_Logistic_Regression_in_PyTorch.ipynb
+++ b/Image_Classification_using_Logistic_Regression_in_PyTorch.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Image Classification using Logistic Regression in PyTorch.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO0OSxfi6QLB40EvOopbcoq",
+      "authorship_tag": "ABX9TyOtZcAK9jpY4F0HenfrpOH1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1706,7 +1706,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 110
+          "height": 90
         },
         "outputId": "552878ef-dc1d-4011-b7b4-0fc7712a575b"
       },
@@ -1735,7 +1735,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 453
+          "height": 417
         },
         "outputId": "ebd57040-5884-49fb-83f9-a18f4a631a5b"
       },
@@ -1832,7 +1832,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 276
+          "height": 256
         },
         "outputId": "8bdb592f-120f-4881-cf3a-aa990d5ccf46"
       },
@@ -1871,7 +1871,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 129
+          "height": 109
         },
         "outputId": "fbab6c86-4326-473e-fb06-dac540b239c9"
       },
@@ -1907,7 +1907,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 129
+          "height": 109
         },
         "outputId": "9b849aa4-f094-4fc7-ce7b-c544ec4a3f0e"
       },
@@ -1948,7 +1948,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 423
+          "height": 403
         },
         "outputId": "7f3439a0-6226-47f1-947b-dd452358f169"
       },
@@ -2505,7 +2505,7 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "## Save and Load the Model"
       ]
     },
     {
@@ -2516,10 +2516,124 @@
         "colab": {}
       },
       "source": [
-        ""
+        "torch.save(model.state_dict(), 'mnist-logistic.pth')"
       ],
-      "execution_count": null,
+      "execution_count": 63,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "haiDXmusjQnz",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 219
+        },
+        "outputId": "ea794216-7d1c-4dde-8dab-c65394c897c7"
+      },
+      "source": [
+        "model.state_dict()"
+      ],
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "OrderedDict([('linear.weight',\n",
+              "              tensor([[-0.0193, -0.0067,  0.0294,  ..., -0.0158,  0.0040,  0.0089],\n",
+              "                      [-0.0243,  0.0073,  0.0103,  ...,  0.0147,  0.0072,  0.0259],\n",
+              "                      [-0.0349,  0.0068, -0.0247,  ...,  0.0077, -0.0099,  0.0159],\n",
+              "                      ...,\n",
+              "                      [-0.0279,  0.0166, -0.0051,  ..., -0.0082, -0.0179,  0.0022],\n",
+              "                      [ 0.0148,  0.0301, -0.0189,  ...,  0.0318,  0.0219,  0.0331],\n",
+              "                      [ 0.0353,  0.0022,  0.0325,  ..., -0.0307,  0.0107,  0.0339]])),\n",
+              "             ('linear.bias',\n",
+              "              tensor([ 0.0052,  0.0162,  0.0034,  0.0168,  0.0097, -0.0172,  0.0122,  0.0076,\n",
+              "                      -0.0386, -0.0179]))])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "J9vJgzRRjR0g",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 219
+        },
+        "outputId": "c32e2755-0e35-4aea-dede-d06cdb25b84f"
+      },
+      "source": [
+        "model2 = MnistModel()\n",
+        "model2.load_state_dict(torch.load('mnist-logistic.pth'))\n",
+        "model2.state_dict()"
+      ],
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "OrderedDict([('linear.weight',\n",
+              "              tensor([[-0.0193, -0.0067,  0.0294,  ..., -0.0158,  0.0040,  0.0089],\n",
+              "                      [-0.0243,  0.0073,  0.0103,  ...,  0.0147,  0.0072,  0.0259],\n",
+              "                      [-0.0349,  0.0068, -0.0247,  ...,  0.0077, -0.0099,  0.0159],\n",
+              "                      ...,\n",
+              "                      [-0.0279,  0.0166, -0.0051,  ..., -0.0082, -0.0179,  0.0022],\n",
+              "                      [ 0.0148,  0.0301, -0.0189,  ...,  0.0318,  0.0219,  0.0331],\n",
+              "                      [ 0.0353,  0.0022,  0.0325,  ..., -0.0307,  0.0107,  0.0339]])),\n",
+              "             ('linear.bias',\n",
+              "              tensor([ 0.0052,  0.0162,  0.0034,  0.0168,  0.0097, -0.0172,  0.0122,  0.0076,\n",
+              "                      -0.0386, -0.0179]))])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 65
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NWYN-UODjT2h",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "1bf3909d-a85e-40f8-988a-8c0018084c42"
+      },
+      "source": [
+        "test_loader = DataLoader(test_dataset, batch_size=256)\n",
+        "result = evaluate(model2, test_loader)\n",
+        "result"
+      ],
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'val_acc': 0.103515625, 'val_loss': 1.179037094116211}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 66
+        }
+      ]
     }
   ]
 }
