--- a/4_Training_Deep_Neural_Networks_on_a_GPU_with_PyTorch.ipynb
+++ b/4_Training_Deep_Neural_Networks_on_a_GPU_with_PyTorch.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "4_Training_Deep_Neural_Networks_on_a_GPU_with_PyTorch.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNGgaY7OjyDUTV85R7vR2ax",
+      "authorship_tag": "ABX9TyNjJzAd5WXp0ADSYPfw9mmp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -142,7 +142,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 484
+          "height": 356
         },
         "outputId": "48796ebd-7f00-42a3-885d-af775eff128e"
       },
@@ -204,19 +204,173 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "itNyswqPmmQq",
-        "colab_type": "text"
+        "id": "JYrcTBbGmaGv",
+        "colab_type": "code",
+        "colab": {}
       },
       "source": [
-        ""
+        "# View : https://pytorch.org/docs/stable/tensors.html#torch.Tensor.view\n",
+        "\n",
+        "class MnistModel(nn.Module):\n",
+        "    \"\"\"Feedfoward neural network with 1 hidden layer\"\"\"\n",
+        "    def __init__(self, in_size, hidden_size, out_size):\n",
+        "        super().__init__()\n",
+        "        # hidden layer\n",
+        "        self.linear1 = nn.Linear(in_size, hidden_size)\n",
+        "        # output layer\n",
+        "        self.linear2 = nn.Linear(hidden_size, out_size)\n",
+        "        \n",
+        "    def forward(self, xb):\n",
+        "        # Flatten the image tensors\n",
+        "        xb = xb.view(xb.size(0), -1)\n",
+        "        # Get intermediate outputs using hidden layer\n",
+        "        out = self.linear1(xb)\n",
+        "        # Apply activation function\n",
+        "        out = F.relu(out)\n",
+        "        # Get predictions using output layer\n",
+        "        out = self.linear2(out)\n",
+        "        return out\n",
+        "    \n",
+        "    def training_step(self, batch):\n",
+        "        images, labels = batch \n",
+        "        out = self(images)                  # Generate predictions\n",
+        "        loss = F.cross_entropy(out, labels) # Calculate loss\n",
+        "        return loss\n",
+        "    \n",
+        "    def validation_step(self, batch):\n",
+        "        images, labels = batch \n",
+        "        out = self(images)                    # Generate predictions\n",
+        "        loss = F.cross_entropy(out, labels)   # Calculate loss\n",
+        "        acc = accuracy(out, labels)           # Calculate accuracy\n",
+        "        return {'val_loss': loss, 'val_acc': acc}\n",
+        "        \n",
+        "    def validation_epoch_end(self, outputs):\n",
+        "        batch_losses = [x['val_loss'] for x in outputs]\n",
+        "        epoch_loss = torch.stack(batch_losses).mean()   # Combine losses\n",
+        "        batch_accs = [x['val_acc'] for x in outputs]\n",
+        "        epoch_acc = torch.stack(batch_accs).mean()      # Combine accuracies\n",
+        "        return {'val_loss': epoch_loss.item(), 'val_acc': epoch_acc.item()}\n",
+        "    \n",
+        "    def epoch_end(self, epoch, result):\n",
+        "        print(\"Epoch [{}], val_loss: {:.4f},\\\n",
+        "        val_acc: {:.4f}\".format(epoch, result['val_loss'], result['val_acc']))"
+      ],
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uilzBiWUoiVx",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Creating a model with 32 hidden dimensions.\n",
+        "\n",
+        "input_size = 784\n",
+        "hidden_size = 32 # you can change this\n",
+        "num_classes = 10"
+      ],
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MFHI6vB_oy7K",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model = MnistModel(input_size, hidden_size=32, out_size=num_classes)"
+      ],
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mWoD4-Uio0Qj",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 90
+        },
+        "outputId": "cd421352-d278-42b8-f9a7-77239c3ce1a9"
+      },
+      "source": [
+        "for t in model.parameters():\n",
+        "    print(t.shape)"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "torch.Size([32, 784])\n",
+            "torch.Size([32])\n",
+            "torch.Size([10, 32])\n",
+            "torch.Size([10])\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JYrcTBbGmaGv",
+        "id": "MBbfB7azo3R8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 166
+        },
+        "outputId": "3a7bb3cb-2108-4b88-a73a-e24b97e9a87a"
+      },
+      "source": [
+        "for images, labels in train_loader:\n",
+        "    outputs = model(images)\n",
+        "    loss = F.cross_entropy(outputs, labels)\n",
+        "    print('Loss:', loss.item())\n",
+        "    break\n",
+        "\n",
+        "print('outputs.shape : ', outputs.shape)\n",
+        "print('Sample outputs :\\n', outputs[:2].data)"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Loss: 2.3113183975219727\n",
+            "outputs.shape :  torch.Size([128, 10])\n",
+            "Sample outputs :\n",
+            " tensor([[-0.0451, -0.0585, -0.0467,  0.0147,  0.0135, -0.1049, -0.1305,  0.1825,\n",
+            "         -0.1664, -0.1514],\n",
+            "        [-0.0563, -0.0635,  0.0138,  0.0186,  0.0998,  0.0188, -0.1287,  0.1562,\n",
+            "         -0.1178, -0.0965]])\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Fw7tbnC1pAd5",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Using a GPU"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FHumD3Rvo_ox",
         "colab_type": "code",
         "colab": {}
       },
